overlays/dev/patch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msh-kustomize
spec:
  replicas: 3
